# ecole42

./: .gitignore  Makefile  a.out  author  file_processor.c  file_processor.h  main.c  run_map_error_test.sh  run_test.sh  tests.sh
.github/: hello my name is Egor.txt
bcs/includes/: file_processor.h
bcs/lib/: ft_atoi.c  ft_strncmp.c
bcs/src/: bsq2.c  map_printer.c
bcs/test/: log.c
fillit/: Makefile  fillit  norm.sh
fillit.tests/: ft_lstadd.c  reader.c  tetramino.c
ft_printf/: CMakeLists.txt  CMakeSettings.json
ft_printf/ft_printf_s21/: CMakeLists.txt
ft_printf/ft_printf_s21/lib/libdic/: CMakeLists.txt  dic.c  dic.h  dic2.c  dic3.c  dic4.c
ft_printf/ft_printf_s21/lib/libftprintf/: CMakeLists.txt  format_list.c  format_parser.c  ft_printf.c  ft_printf.h  ft_printf2.c  ft_printf_fill_args.c  ft_printf_internal.h  list_to_string.c  parsers.c  types.c
ft_printf/ft_printf_s21/lib/libftprintf/float/: float.h  float_2.c  float_5.c  precision.c
ft_printf/ft_printf_s21/lib/libftprintf/list_create/: add_free_item.c  to_list.c
ft_printf/ft_printf_s21/lib/libftprintf/list_create/parse_format/: create_free_fmt.c  format_parser.c  format_to_string.c  handle_format_parsed.c  try_extract_id.c
ft_printf/ft_printf_s21/lib/libftprintf/list_parse_and_format/: replace_args.c
ft_printf/ft_printf_s21/lib/libftprintf/list_parse_and_format/process_format/: process_blank.c  process_format.c  process_precision.c  process_sign.c  process_type.c  process_width.c
ft_printf/ft_printf_s21/lib/libftprintf/list_parse_and_format/process_format/parsers/: char_to_string.c  hex_to_string.c  int_to_string.c  oct_to_string.c  parse_d.c  parse_u.c  pchar_to_string.c
ft_printf/ft_printf_s21/lib/libftprintf/list_parse_and_format/process_format/parsers/float/: float.c  float.h  float_2.c  float_3.c  float_4.c
ft_printf/ft_printf_s21/lib/libftprintf/replace_args/: ft_printf_fill_args.c  parsers.c  replace_args.c
ft_printf/ft_printf_s21/lib/libftprintf/replace_args/process_format/: process_blank.c  process_precision.c  process_width.c
ft_printf/ft_printf_s21/lib/libftprintf/to_list/: to_list.c
ft_printf/ft_printf_s21/lib/libftprintf/to_list/parse_format/: format_parser.c  handle_format_parsed.c  try_extract_id.c
ft_printf/ft_printf_s21/lib/libio/: CMakeLists.txt  files.txt  ft_e_putstr.c  ft_file.c  ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  libio.h  save_file_no.c
ft_printf/ft_printf_s21/lib/liblists/: CMakeLists.txt  lists.h  lst_count.c  lst_remove_sorted.c  lstdelone.c
ft_printf/ft_printf_s21/lib/libmem/: CMakeLists.txt  ft_bzero.c  ft_free_not_null.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  libmem.h
ft_printf/ft_printf_s21/lib/libstr/: CMakeLists.txt  ft_contains.c  ft_count_words.c  ft_e_putstr.c  ft_is_number.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_putchar.c  ft_putstr.c  ft_putstr_fd.c  ft_split.c  ft_str_append.c  ft_str_count_chars.c  ft_str_ends_with.c  ft_str_equals.c  ft_str_insert_at.c  ft_str_is_empty.c  ft_str_left_from.c  ft_str_remove_at.c  ft_str_remove_comment.c  ft_str_repeat.c  ft_str_replace.c  ft_str_starts_with.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  (+18 more)
ft_printf/ft_printf_s21/lib/libtests/: CMakeLists.txt  asserts.c  asserts.h  asserts2.c  test_runner.c  test_runner.h
ft_printf/ft_printf_s21/lib/libztarray/: CMakeLists.txt  ft_free_zt_array.c  ztarray.h
ft_printf/ft_printf_s21/src/: CMakeLists.txt  main.c
ft_printf/ft_printf_tests/: CMakeLists.txt  main.c  tests.c  tests.h
ft_select/: CMakeLists.txt
gnl/: get_next_line.c  get_next_line.h  norm.sh
includes/: file_processor.h  ft.h  ft_list.h  section.h  t_table.h
lib/: ft_strcpy.c  ft_strncpy.c  log.c  m_alloc.c  new_line.c  print_dup.c
ls/: Makefile  author  cur_dir.c  entry.c  ft_ls  get_folder_entries.c  log.txt  ls.h  main.c  parse_arguments.c  print_entries.c  push.sh  sort.c
ls/libft/: log.c  (+14 more)
minishell/: CMakeLists.txt  CMakeSettings.json  push.sh
minishell/CMakeProject4/: CMakeLists.txt  CMakeProject4.cpp
minishell/minishell/libft/: CMakeLists.txt  Makefile  asserts.c  debug.c  debug2.c  dic.c  dic4.c  ft_atoi.c  ft_bzero.c  ft_contains.c  ft_count_words.c  ft_e_putstr.c  ft_ends_with.c  ft_env.c  ft_exec.c  ft_file.c  ft_is_number.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_last_index.c  ft_lst_count.c  ft_lst_find.c  ft_lst_free.c  ft_lst_free_item.c  ft_lst_insert.c  ft_lst_reduce.c  ft_lst_remove_sorted.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  (+62 more)
minishell/minishell/src/: CMakeLists.txt  cd.c  cmd_parser.c  commands_list.c  console_read_buffer.c  console_read_buffer2.c  console_read_buffer3.c  console_read_buffer4.c  console_reader.c  cursor_move.c  cursor_move2.c  env.c  env2.c  env4.c  exec.c  exec2.c  folders.c  ft_set_env copy.c  ft_set_env.c  history.c  history.h  history2.c  key_constants.h  key_handlers.c  key_handlers2.c  key_handlers3.c  main.c  minishell.h  pipe_exec - Copy.c  pipe_exec.c  pipe_fd_to_close.c  pipe_parse.c  print_env.c  process_command.c  replace_quoted.c  replace_quoted2.c  shell.c  termios.c
release/: directory.c  log.c
src/: all_candidates.c  bsq.c  file_processor.c  main.c  map_first_line_parser.c  map_line_parser.c  map_parser.c  map_printer.c  map_validator.c  section.c  sections.c  source_file_saver.c  table.c
test/: log.c
test_files/: 1x1mapEmpty.txt  1x1mapFull.txt  badfile.txt  emptymap.txt  extracharonmap.txt  fullsAndEmptyesAretheSame.txt  invalidinfoLESSlines.txt  invalidinfoMORElines.txt  lastlineinvalid.txt  nosolutionMapIsFull.txt  secondlineisbiggerthenfirst.txt  thismapisValid.txt  twosolutionsbutValid.txt
test_lib/: assert.c  assert.h  byte_array.c  byte_array.h  str_array.c  string_array.h
(+539 files in other folders)
