# CMakeList.txt : CMake project for CMakeProject4, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeProject4 "CMakeProject4.cpp" "CMakeProject4.h")

# TODO: Add tests and install targets if needed.
